testsuite/tests/indexed-types/should_fail/T13777.stderr

T13777.hs:9:1: error:
    You have written a *complete user-suppled kind signature*,
    but the following variable is undetermined: k0 :: *
    Perhaps add a kind signature.
    Inferred result kind: forall (k :: k0). Proxy k -> *

T13777.hs:12:1: error:
    You have written a *complete user-suppled kind signature*,
    but the following variables are undetermined:
      k0 :: *
      k1 :: *
      k2 :: *
    Perhaps add a kind signature.
    Inferred kinds of user-written variables:
      b :: *
      a :: b
    Inferred result kind:
      forall (c :: k2) d (e :: k1).
      (forall (f :: k0). Proxy f) -> Proxy c -> Proxy d -> Proxy e -> *
